feat(args): handle service arguments the same way

--- a/prometheus/map.jinja
+++ b/prometheus/map.jinja
@@ -22,3 +22,15 @@
 
 {#- Merge the prometheus pillar #}
 {%- set prometheus = salt['pillar.get']('prometheus', default=defaults, merge=True) %}
+
+{#- Contactenate arguments #}
+{%- macro concat_args(args) %}
+{%-   set args = args|dictsort %}
+{%-   if args|length > 0 %}
+{%-     for k,v in args -%}
+{%-       if not k or not v %}{% continue %}{% endif -%}
+          --{{ k }}={{ v }}
+{%-       if not loop.last %} {% endif -%}
+{%-     endfor -%}
+{%-   endif -%}
+{%- endmacro %}
