feat(archives): support for archives file format
BREAKING CHANGE: the parameter `pkg` is now a dictionary. References
 to `prometheus.pkg` should be changed to `prometheus.pkg.name`.

--- a/prometheus/files/default/prometheus.sh.jinja
+++ b/prometheus/files/default/prometheus.sh.jinja
@@ -3,4 +3,8 @@
 # Your changes may be overwritten.
 ########################################################################
 
-{{ config|yaml(False) }}
+{%- if prometheus.environ %}
+    {%- for item in prometheus.environ %}
+{{ item }}
+    {%- endfor %}
+{%- endif %}
