--- a/prometheus/map.jinja
+++ b/prometheus/map.jinja
@@ -7,6 +7,7 @@
 {%- import_yaml tplroot ~ "/defaults.yaml" as default_settings %}
 {%- import_yaml tplroot ~ "/osfamilymap.yaml" as osfamilymap %}
 {%- import_yaml tplroot ~ "/osmap.yaml" as osmap %}
+{%- import_yaml tplroot ~ "/osarchmap.yaml" as osarchmap %}
 {%- import_yaml tplroot ~ "/osfingermap.yaml" as osfingermap %}
 
 {%- set defaults = salt['grains.filter_by'](default_settings,
@@ -14,7 +15,9 @@
     merge=salt['grains.filter_by'](osfamilymap, grain='os_family',
       merge=salt['grains.filter_by'](osmap, grain='os',
         merge=salt['grains.filter_by'](osfingermap, grain='osfinger',
-          merge=salt['pillar.get']('prometheus:lookup', default={})
+          merge=salt['grains.filter_by'](osarchmap, grain='osarch',
+            merge=salt['pillar.get']('prometheus:lookup', default={})
+          )
         )
       )
     )
@@ -22,6 +25,18 @@
 
 {#- Merge the prometheus pillar #}
 {%- set prometheus = salt['pillar.get']('prometheus', default=defaults, merge=True) %}
+
+{#- Update archive details #}
+{%- if prometheus.pkg.use_upstream_archive %}
+    {%- set name = 'prometheus-%s.%s-%s'|format(prometheus.version, prometheus.kernel, prometheus.arch) %}
+    {%- do prometheus.pkg.archive.update({
+           'source': prometheus.pkg.archive.uri + 'v' + prometheus.version + '/' + name 
+                                                + '.' + prometheus.pkg.archive.archive_format,
+           'archive_format': prometheus.pkg.archive.archive_format.split('.')[0]
+    }) %}
+    {%- do prometheus.update({'base_dir': prometheus.pkg.archive.name + '/' + name}) %}
+    {%- do prometheus.environ.append('export PATH=${PATH}:' + prometheus.pkg.archive.name + '/' + name) %}
+{%- endif %}
 
 {#- Contactenate arguments #}
 {%- macro concat_args(args) %}
