--- a/prometheus/map.jinja
+++ b/prometheus/map.jinja
@@ -9,35 +9,29 @@
 {%- import_yaml tplroot ~ "/osmap.yaml" as osmap %}
 {%- import_yaml tplroot ~ "/osarchmap.yaml" as osarchmap %}
 {%- import_yaml tplroot ~ "/osfingermap.yaml" as osfingermap %}
+{#- focused defaults #}
+{%- import_yaml tplroot ~ "/archive/defaults.yaml" as archive_defaults %}
+{%- import_yaml tplroot ~ "/archive/defaults.yaml" as config_defaults %}
 
 {%- set defaults = salt['grains.filter_by'](default_settings,
-    default='prometheus',
-    merge=salt['grains.filter_by'](osfamilymap, grain='os_family',
-      merge=salt['grains.filter_by'](osmap, grain='os',
-        merge=salt['grains.filter_by'](osfingermap, grain='osfinger',
-          merge=salt['grains.filter_by'](osarchmap, grain='osarch',
-            merge=salt['pillar.get']('prometheus:lookup', default={})
-          )
-        )
-      )
-    )
-) %}
+    merge=salt['grains.filter_by'](archive_defaults,
+      merge=salt['grains.filter_by'](config_defaults,
+        merge=salt['grains.filter_by'](osfamilymap, grain='os_family',
+          merge=salt['grains.filter_by'](osmap, grain='os',
+            merge=salt['grains.filter_by'](osfingermap, grain='osfinger',
+              merge=salt['grains.filter_by'](osarchmap, grain='osarch',
+                merge=salt['pillar.get']('prometheus:lookup', default={}),
+                base='prometheus'),
+              base='prometheus'),
+            base='prometheus'),
+          base='prometheus'),
+        base='prometheus'),
+      base='prometheus'),
+    base='prometheus')
+%}
 
 {#- Merge the prometheus pillar #}
 {%- set prometheus = salt['pillar.get']('prometheus', default=defaults, merge=True) %}
-
-{#- archive jinja #}
-{%- if prometheus.pkg.use_upstream_archive %}
-    {%- set name = 'prometheus-%s.%s-%s'|format(prometheus.version, prometheus.kernel, prometheus.arch) %}
-    {%- set uri = prometheus.pkg.archive.uri + '/v' + prometheus.version + '/' + name %}
-    {%- do prometheus.pkg.archive.update({
-           'source':         uri + '.' + prometheus.pkg.archive.archive_suffix,
-           'archive_format': prometheus.pkg.archive.archive_format
-    }) %}
-    {%- do prometheus.update({'base_dir': prometheus.pkg.archive.name + '/' + name}) %}
-    {%- do prometheus.environ.append('export PATH=${PATH}:' + prometheus.pkg.archive.name + '/' + name) %}
-{%- endif %}
-
 
 {#- Contactenate arguments #}
 {%- macro concat_args(args) %}
