--- a/prometheus/files/default/systemd.ini.jinja
+++ b/prometheus/files/default/systemd.ini.jinja
@@ -3,13 +3,14 @@
 #########################################################
 [Unit]
 Description={{ desc }}
-Wants={{ wants }}
-After={{ after }}
+Wants=network-online.target
+After=
 Documentation=https://github.com/saltstack-formulas/prometheus-formula
 
 [Service]
 User={{ user }}
 Group={{ group }}
+WorkingDirectory={{ workdir }}
 ExecStart={{ start }}
 ExecStop={{ stop }}
 PIDFile=/var/run/{{ name }}.pid
