--- a/prometheus/map.jinja
+++ b/prometheus/map.jinja
@@ -7,18 +7,16 @@
 {%- import_yaml tplroot ~ "/defaults.yaml" as default_settings %}
 {%- import_yaml tplroot ~ "/osarchmap.yaml" as osarchmap %}
 {%- import_yaml tplroot ~ "/osfamilymap.yaml" as osfamilymap %}
-{%- import_yaml tplroot ~ "/archive/defaults.yaml" as archive_defaults %}
 
 {%- set defaults = salt['grains.filter_by'](default_settings,
-    merge=salt['grains.filter_by'](archive_defaults,
-      merge=salt['grains.filter_by'](osarchmap, grain='osarch',
-        merge=salt['grains.filter_by'](osfamilymap, grain='os_family',
-          merge=salt['pillar.get']('prometheus:lookup', default={}),
-          base='prometheus'),
-        base='prometheus'),
-      base='prometheus'),
-    base='prometheus')
-%}
+    default='prometheus',
+    merge=salt['grains.filter_by'](osarchmap, grain='osarch',
+      merge=salt['grains.filter_by'](osfamilymap, grain='os_family',
+          merge=salt['pillar.get']('prometheus:lookup', default={})
+        )
+    )
+) %}
+
 
 {#- Merge the prometheus pillar #}
 {%- set prometheus = salt['pillar.get']('prometheus', default=defaults, merge=True) %}
