feat(yamllint): include for this repo and apply rules throughout
* Semi-automated using `ssf-formula` (v0.5.0)
* Fix errors shown below:

```bash
prometheus-formula$ $(grep "\- yamllint" .travis.yml | sed -e "s:^\s\+-\s\(.*\):\1:")
./prometheus/osfamilymap.yaml
  1:89      error    line too long (116 > 88 characters)  (line-length)
  1:24      error    trailing spaces  (trailing-spaces)
  13:2      error    syntax error: found character '%' that cannot start any token
  24:89     error    line too long (90 > 88 characters)  (line-length)
  25:89     error    line too long (167 > 88 characters)  (line-length)

./prometheus/defaults.yaml
  6:13      error    too many spaces inside braces  (braces)
  6:35      error    too many spaces inside braces  (braces)
  7:11      error    too many spaces inside braces  (braces)
  7:25      error    too many spaces inside braces  (braces)
  8:22      warning  truthy value should be one of [false, true]  (truthy)
  9:25      warning  truthy value should be one of [false, true]  (truthy)
  49:85     error    trailing spaces  (trailing-spaces)
  103:20    warning  truthy value should be one of [false, true]  (truthy)
  104:25    warning  truthy value should be one of [false, true]  (truthy)
  108:16    warning  truthy value should be one of [false, true]  (truthy)
  113:24    warning  missing starting space in comment  (comments)

pillar.example
  31:6      warning  missing starting space in comment  (comments)
  32:8      warning  missing starting space in comment  (comments)
  32:7      warning  comment not indented like content  (comments-indentation)
  51:5      warning  comment not indented like content  (comments-indentation)
  65:89     error    line too long (110 > 88 characters)  (line-length)
  68:29     error    too many spaces after colon  (colons)
  68:34     warning  too few spaces before comment  (comments)
  68:89     error    line too long (106 > 88 characters)  (line-length)
  69:34     warning  too few spaces befo

--- a/prometheus/map.jinja
+++ b/prometheus/map.jinja
@@ -21,6 +21,14 @@
 {#- Merge the prometheus pillar #}
 {%- set prometheus = salt['pillar.get']('prometheus', default=defaults, merge=True) %}
 
+{#- Post-processing for specific non-YAML customisations #}
+{%- if grains.os == 'MacOS' %}
+{%-   set macos_user = salt['cmd.run']("stat -f '%Su' /dev/console") %}
+{%-   set macos_group = salt['cmd.run']("stat -f '%Sg' /dev/console") %}
+{%-   do prometheus.update({'rootuser': macos_user}) %}
+{%-   do prometheus.update({'rootgroup': macos_group}) %}
+{%- endif %}
+
 {#- Contactenate arguments #}
 {%- macro concat_args(args) %}
 {%-   set args = args|dictsort %}
