--- a/prometheus/files/default/environ.sh.jinja
+++ b/prometheus/files/default/environ.sh.jinja
@@ -2,5 +2,8 @@
 # File managed by Salt at <{{ source }}>.
 # Your changes may be overwritten.
 ########################################################################
+# Set the command-line arguments to pass to the server.
+ARGS="{%- for arg, value in args.items() %}--{{ arg }}={{ value }}{{ " " if not loop.last else "" }}{% endfor %}"
 
-{{ config|yaml(False) }}
+
+
