fix: revert to use of macro.jinja for arg handling
The previous additions to environ.sh.jinja were fixing something that wasnt broken.

--- a/prometheus/files/default/environ.sh.jinja
+++ b/prometheus/files/default/environ.sh.jinja
@@ -2,8 +2,8 @@
 # File managed by Salt at <{{ source }}>.
 # Your changes may be overwritten.
 ########################################################################
-# Set the command-line arguments to pass to the server.
-ARGS="{%- for arg, value in args.items() %}--{{ arg }}={{ value }}{{ " " if not loop.last else "" }}{% endfor %}"
+# Set the command-line arguments to pass to the server.%}"
+ARGS="{{ args }}"
 
 
 
