fix(environ): remove stray control characters
Remove useless "%}" from comment in file.

Signed-off-by: Georg Pfuetzenreuter <mail@georg-pfuetzenreuter.net>

--- a/prometheus/files/default/environ.sh.jinja
+++ b/prometheus/files/default/environ.sh.jinja
@@ -2,7 +2,7 @@
 # File managed by Salt at <{{ source }}>.
 # Your changes may be overwritten.
 ########################################################################
-# Set the command-line arguments to pass to the server.%}"
+# Set the command-line arguments to pass to the server."
 {{ arg_name }}="{{ args }}"
 
 
